add second endpoint to certify networks
